fix(AboutPage): adjust margin for "Vision", "Mission", "Community", and "Offer" sections for improved spacing

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -5,6 +5,7 @@
 }
 .Vision,.Mission ,.Community, .Offer {
     margin: 50px;
+    margin-top: 0px;
 }
 
 .Offer li {
